fix broken CSS for simple theme front page

--- a/src/Site/views/scriptureforge/theme/simple/page/home/assets/sass/main.scss
+++ b/src/Site/views/scriptureforge/theme/simple/page/home/assets/sass/main.scss
@@ -2,7 +2,6 @@
 @import 'libs/functions';
 @import 'libs/mixins';
 @charset "UTF-8";
-@import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic");
 
 /*
@@ -239,7 +238,7 @@
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background: url('images/overlay.png');
+			background: url('../../images/overlay.png');
 		}
 
 		img {
@@ -716,7 +715,7 @@
 	#header {
 		position: relative;
 		margin: 0;
-		background-image: url('images/overlay.png'), url('../../images/header.jpg');
+		background-image: url('../../images/overlay.png'), url('../../images/header.jpg');
 		background-size: auto, cover;
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
